--- a/tkbakeryadmintemplate/index.html
+++ b/tkbakeryadmintemplate/index.html
@@ -5,7 +5,8 @@
         <!-- bootstrap css1 js2 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <!-- fontasesome css1 -->
-        <link href="../../dltwdfbatch4/libs/fontawesomepro/css/all.min.css" rel="stylesheet" type="text/css">
+        <link href="../../wdf4/libs/fontawesomepro/css/all.min.css" rel="stylesheet" type="text/css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
         <!-- fav icon -->
         <link href="./img/fav/favicon.png" rel="icon" type="image/png" sizes="16x16"/>
         <!-- custome css -->
